[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
angstrom-types.workspace = true
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.139.0"
base64.workspace = true
base64-serde.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
flate2 = "1.1.1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
