[package]
name = "telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
angstrom-types.workspace = true
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.93.0"
base64.workspace = true
base64-serde.workspace = true
chrono = { version = "0.4.41", features = ["serde"] }
flate2 = "1.1.1"
order-pool.workspace = true
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", version = "1.4.3", tag = "v1.4.3", features = [
  "serde",
] }
reth-provider.workspace = true
serde.workspace = true
serde_json.workspace = true
telemetry-recorder.workspace = true
tokio.workspace = true
tracing.workspace = true
validation.workspace = true
