[package]
name = "angstrom-types"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
base64.workspace = true
bitmaps.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
reth-provider.workspace = true
reth-trie.workspace = true
reth-chainspec.workspace = true
reth-storage-api.workspace = true
# blsful.workspace = true
bytes.workspace = true
pade.workspace = true
pade-macro.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
itertools.workspace = true
serde_json.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-ethereum-primitives.workspace = true
revm.workspace = true
num-traits.workspace = true
secp256k1.workspace = true
k256.workspace = true
malachite.workspace = true
hex-literal.workspace = true
anyhow.workspace = true
alloy.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-rlp.workspace = true
derive_more = "0"
eyre.workspace = true
bincode = { workspace = true }
serde = { workspace = true, optional = true, default-features = false, features = [
  "derive",
] }
uniswap_v3_math.workspace = true
foldhash = "0"

rand = { workspace = true, optional = true }
dashmap.workspace = true
auto_impl.workspace = true

[build-dependencies]
convert_case = "0.6.0"
itertools = "0.13.0"

[dev-dependencies]
rand.workspace = true
tokio.workspace = true
testing-tools.workspace = true

[features]
default = ["serde", "testnet"]
testnet = ["dep:rand"]
# serde = ["dep:serde", "alloy-primitives/serde"]
serde = ["dep:serde"]
anvil = []