[package]
name = "angstrom-types"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
bitmaps.workspace = true
futures.workspace = true
reth.workspace = true
reth-chainspec.workspace = true
reth-network-peers = { workspace = true, features = ["secp256k1"] }
reth-provider.workspace = true
reth-storage-api.workspace = true
reth-trie.workspace = true
alloy = { workspace = true, features = ["rpc-types-mev"] }
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-rlp.workspace = true
anyhow.workspace = true
auto_impl.workspace = true
bincode = { workspace = true }
bytes.workspace = true
dashmap.workspace = true
derive_more = "0"
eyre.workspace = true
foldhash = "0"
hex-literal.workspace = true
itertools.workspace = true
k256.workspace = true
malachite.workspace = true
num-traits.workspace = true
pade.workspace = true
pade-macro.workspace = true
rand.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
revm.workspace = true
secp256k1.workspace = true
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uniswap_v3_math.workspace = true
reqwest = { version = "0.12.5", features = ["json"] }
revm-bytecode.workspace = true
revm-database.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true
tower = "0.5.2"

[build-dependencies]
convert_case.workspace = true
itertools.workspace = true

[dev-dependencies]
angstrom-types.workspace = true
rand.workspace = true
testing-tools.workspace = true
tokio.workspace = true

[features]
default = []
anvil = []
