[package]
name = "uniswap-v4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true


[dependencies]
serde.workspace =true
angstrom-types.workspace = true
angstrom-utils.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
futures.workspace = true
futures-util.workspace = true
uniswap_v3_math.workspace = true
itertools.workspace = true
malachite.workspace = true
malachite-q.workspace = true
pade.workspace = true
pade-macro.workspace = true
rand.workspace = true
rand_distr.workspace = true
tokio.workspace = true
reth-tasks.workspace = true
criterion.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
reth-provider.workspace = true

arraydeque = "0.5"
num-bigfloat = "1.7"
once_cell = "1.20.2"

# Using clap for our bookgen command-line tool
clap.workspace = true

[dev-dependencies]
pade.workspace = true
pade-macro.workspace = true
testing-tools.workspace = true
divan = "0"
tokio-stream.workspace = true

[build-dependencies]
convert_case = "0"
itertools.workspace = true
